# musicbx

./: .gitignore  README.md  gradle.properties  settings.gradle.kts
cargo/: Cargo.toml  README.md  build.gradle.kts
cargo/additional-nodes/: Cargo.toml  build.rs
cargo/additional-nodes/nodes/: FastTremolo.json  TestFm.json
cargo/additional-nodes/src/: fast_tremolo.rs  lib.rs  synth.rs  test.rs  test_fm.rs
cargo/audio-test/: Cargo.toml
cargo/audio-test/src/: configuration.rs  lib.rs  main.rs
cargo/editor-backend/: Cargo.toml
cargo/editor-backend/src/: app.rs  lib.rs
cargo/editor-backend/src/app/: delegate.rs  mod.rs  state.rs
cargo/editor-backend/src/bindings/: available_nodes.rs  configuration.rs  editor.rs  mod.rs
cargo/editor-backend/src/model/: configuration.rs
cargo/editor-backend/src/nodes/: add.rs  amp.rs  hard_clip.rs  mod.rs  mul.rs  noise.rs  output.rs  simple_saw.rs  sin.rs  test_fm.rs
cargo/editor-backend/src/util/: observable.rs
cargo/jni/: Cargo.toml
cargo/jni/src/: app.rs  configuration.rs  lib.rs  main.rs  model.rs  patch.rs
cargo/jni/src/bindings/: available_modules.rs  available_nodes.rs  configuration.rs  configuration_service.rs  editor.rs  mod.rs  playback.rs  playback_service.rs
cargo/jni/src/modules/: amp.rs  mod.rs  mul.rs  output.rs  sin.rs
cargo/jni/src/nodes/: amp.rs  mod.rs  mul.rs  noise.rs  output.rs  simple_saw.rs  sin.rs
cargo/jni/src/settings/: mod.rs  modules.rs
cargo/jni/src/util/: jni_errors.rs  mod.rs  observable.rs
cargo/musicbx/: Cargo.toml
cargo/musicbx-codegen/: Cargo.toml
cargo/musicbx-codegen/src/: lib.rs
cargo/musicbx-core/: Cargo.toml
cargo/musicbx-core/src/: sample_rate.rs
cargo/musicbx-derive/: Cargo.toml
cargo/musicbx-derive/src/: from_sample_rate.rs  lib.rs
cargo/musicbx-extra/: Cargo.toml
cargo/musicbx-extra/src/: lib.rs
cargo/musicbx-macro/: Cargo.toml
cargo/musicbx-macro/src/: lib.rs  node.rs
cargo/musicbx-std/: Cargo.toml
cargo/musicbx-std/src/: lib.rs
cargo/musicbx-std/src/filter/: lp12.rs  mod.rs
cargo/musicbx-std/src/osc/: mod.rs  simple_saw.rs  sin.rs
cargo/musicbx-std/src/util/: add.rs  amp.rs  constsig.rs  mod.rs  mul.rs  noise.rs
cargo/musicbx-types/: Cargo.toml
cargo/musicbx-types/src/: description.rs  lib.rs
cargo/musicbx/musicbx-codegen/: Cargo.toml
cargo/musicbx/musicbx-codegen/src/: codegen.rs  lib.rs
cargo/musicbx/musicbx-core/: Cargo.toml
cargo/musicbx/musicbx-core/src/: data.rs  lib.rs  node.rs
cargo/musicbx/musicbx-derive/: Cargo.toml
cargo/musicbx/musicbx-derive/src/: from_sample_rate.rs  lib.rs  node.rs
cargo/musicbx/musicbx-std/: Cargo.toml
cargo/musicbx/musicbx-std/src/: lib.rs
cargo/musicbx/musicbx-std/src/filter/: lp12.rs  mod.rs
cargo/musicbx/musicbx-std/src/osc/: mod.rs  simple_saw.rs  sin.rs
cargo/musicbx/musicbx-std/src/util/: add.rs  amp.rs  constsig.rs  hard_clip.rs  mod.rs  mul.rs  noise.rs
cargo/musicbx/musicbx-types/: Cargo.toml
cargo/musicbx/musicbx-types/src/: lib.rs  parameter.rs  patch.rs
cargo/musicbx/src/: lib.rs
cargo/tst/: Cargo.toml  build.rs
cargo/tst/src/: main.rs  test.rs
editor/: build.gradle.kts  settings.gradle.kts
editor/examples/: AutoTechno.json  Beeps.json  Pitch Down Noisy Sine.json
editor/src/main/kotlin/androidx/compose/ui/util/: UpdateEffect.desktop.kt
editor/src/main/kotlin/ru/pema4/musicbx/: Main.kt  main.kt
editor/src/main/kotlin/ru/pema4/musicbx/model/: Cable.kt  Module.kt  Patch.kt  Socket.kt
editor/src/main/kotlin/ru/pema4/musicbx/service/: AvailableModulesService.kt  AvailableNodesService.kt  ConfigurationService.kt  EditorService.kt  FileService.kt  PatchService.kt  PlaybackService.kt  PreferencesService.kt  (+1 more)
(+53 files in other folders)
