[package]
edition = "2021"
name = "editor-backend"
version = "0.1.0"

[dependencies]
anyhow = "1.0.56"
clap = "3.1.10"
cpal = "0.13.5"
enum_dispatch = "0.3.8"
hashbrown = "0.12.0"
jni = "0.19.0"
lazy_static = "1.4.0"
additional-nodes = { path = "../additional-nodes" }
petgraph = "0.6.0"
rand = "0.8.5"
serde_json = "1.0.79"

[dependencies.glicol_synth]
git = "https://github.com/pema4/glicol"

[dependencies.musicbx]
path = "../musicbx"

[dependencies.serde]
features = ["derive"]
version = "1.0.136"

[lib]
crate_type = ["cdylib"]
