[package]
edition = "2021"
name = "editor-backend"
version = "0.1.0"

[dependencies]
additional-nodes = { path = "../additional-nodes" }
anyhow = "1.0.56"
cpal = "0.13.5"
glicol_synth = { git = "https://github.com/pema4/glicol" }
hashbrown = "0.12.0"
jni = "0.19.0"
lazy_static = "1.4.0"
musicbx = { path = "../musicbx" }
petgraph = "0.6.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"

[lib]
crate_type = ["cdylib"]
