[package]
name = "musicbx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
musicbx-macro = { path = "../musicbx-macro" }
musicbx-core = { path = "../musicbx-core" }
musicbx-std = { path = "../musicbx-std" }
