[package]
name = "musicbx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
musicbx-derive = { path = "../musicbx-derive" }
musicbx-core = { path = "../musicbx-core" }
musicbx-std = { path = "../musicbx-std" }
musicbx-types = { path = "../musicbx-types" }
