[package]
name = "musicbx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
musicbx-codegen = { path = "musicbx-codegen", optional = true }
musicbx-core = { path = "musicbx-core" }
musicbx-derive = { path = "musicbx-derive" }
musicbx-std = { path = "musicbx-std", optional = true }
musicbx-types = { path = "musicbx-types" }

[features]
default = ["std"]
std = ["musicbx-std"]
codegen = ["musicbx-codegen"]
