[package]
name = "musicbx-std"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
musicbx-core = { path = "../musicbx-core" }
musicbx-derive = { path = "../musicbx-derive" }
musicbx-types = { path = "../musicbx-types" }
rand = "0.8.5"
